[workspace]
resolver = "3"
members = ["crates/osv-bloom", "crates/osv-bloom-build"]

[workspace.package]
edition = "2024"
rust-version = "1.93"
license = "MIT"
repository = "https://github.com/endevco/osv-bloom"
authors = ["endevco"]

[workspace.dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
