[package]
name = "osv-bloom"
version = "0.1.0"
description = "Compact bloom filter of malicious npm (name, major) buckets from OSV"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
blake3.workspace = true
thiserror = "2"
